--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,22 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-mqtt-protocol</artifactId>
-            <version>2.5.0-SNAPSHOT</version>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>artemis-amqp-protocol</artifactId>
+            <version>2.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-server</artifactId>
-            <version>2.5.0-SNAPSHOT</version>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.qpid</groupId>
+            <artifactId>qpid-jms-client</artifactId>
+            <version>0.27.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -47,6 +57,42 @@
             <version>RELEASE</version>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>apache-artemis-test</id>
+            <repositories>
+
+                <repository>
+                    <id>artemis-test</id>
+                    <name>Apache Artemis Test</name>
+                    <url>https://repository.apache.org/content/repositories/orgapacheactivemq-1156</url>
+                    <layout>default</layout>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </repository>
+            </repositories>
+
+            <pluginRepositories>
+
+                <pluginRepository>
+                    <id>artemis-test2</id>
+                    <name>Apache Artemis Test</name>
+                    <url>https://repository.apache.org/content/repositories/orgapacheactivemq-1156</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </pluginRepository>
+            </pluginRepositories>
+        </profile>
+    </profiles>
 
 
 </project>
