--- a/src/test/resources/login.config
+++ b/src/test/resources/login.config
@@ -10,5 +10,9 @@
  ******************************************************************************/
 
 kapua {
-   org.eclipse.kapua.KapuaLoginModule sufficient;
+   org.eclipse.kapua.KapuaLoginModule sufficient
+       debug=false
+       reload=true
+       org.apache.activemq.jaas.properties.user="artemis-users.properties"
+       org.apache.activemq.jaas.properties.role="artemis-roles.properties";
 };
