--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,12 @@
             <artifactId>camel-core</artifactId>
             <version>2.20.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-unit</artifactId>
+            <version>3.5.1</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
